@@ -5,8 +5,6 @@ import java.awt.image.BufferedImage;
 
 import edu.colorado.phet.common.phetcommon.resources.PhetResources;
 
-//REVIEW IDEA identifies unused constants here
-
 /**
  * Resources (images and translated strings) for "Fractions" are loaded eagerly to make sure everything exists on sim startup, see #2967.
  * Automatically generated by edu.colorado.phet.buildtools.preprocessor.ResourceGenerator
@@ -21,6 +19,7 @@ public class FractionsResources {
         public static final String FRACTION_MATCHER = RESOURCES.getLocalizedString( "fractionMatcher" );
         public static final String LEVEL = RESOURCES.getLocalizedString( "level" );
         public static final String LEVEL__PATTERN = RESOURCES.getLocalizedString( "level.pattern" );
+        public static final String MATCHING_GAME = RESOURCES.getLocalizedString( "matchingGame" );
         public static final String MY_FRACTIONS = RESOURCES.getLocalizedString( "myFractions" );
         public static final String MY_MATCHES = RESOURCES.getLocalizedString( "myMatches" );
         public static final String NEW_GAME = RESOURCES.getLocalizedString( "newGame" );
