@@ -1,3 +1,4 @@
+Fraction Matcher: Addressed a few review comments, see #3357
 Converted to use colorblind friendly red, see #3357
 add REVIEW comments based on a quick scan of each class file in fractions package
 add REVIEW comments based on a quick scan of each class file in fractionmatcher package
